ontol/ontol-compiler/test-cases/error/repr/disjoint_intersection2.on
// NB: meters is a concrete type here:
def meters (rel* is: i64)

def my_length ( // ERROR intersection of disjoint types
    rel* is: meters // NOTE base type is `ontol.number`
    rel* is: text // NOTE base type is `ontol.text`
)
